--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "engines": {
-    "node": "18.12.0"
+    "node": ">=14.20.1"
   },
   "keywords": [],
   "author": "",
